--- a/app/src/main/res/layout/activity_ridecreation.xml
+++ b/app/src/main/res/layout/activity_ridecreation.xml
@@ -72,6 +72,7 @@
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:id="@+id/pick_time_button"
                     android:layout_width="wrap_content"
+                    android:background="@drawable/button_shape"
                     android:layout_gravity="center_horizontal"
                     android:layout_height="wrap_content"
                     android:text="PICK TIME"/>
@@ -94,6 +95,7 @@
                     android:id="@+id/btn_origin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/button_shape"
                     android:layout_gravity="center_horizontal"
                     android:textAllCaps="false"
                     android:text="PICK LOCATION"/>
@@ -125,6 +127,7 @@
 
         <Button
                 style="@style/Widget.AppCompat.Button.Colored"
+                android:background="@drawable/button_shape"
                 android:id="@+id/btn_submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
